# gopropy

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
docs/: MODELS.md
examples/: basic_usage.py  export_formats.py  model_detection_example.py  visualize_rerun.py
scripts/: generate_model_docs.py
src/gopropy/: __init__.py  exceptions.py  extractor.py  models.py  parser.py  telemetry.py  visualization.py
